--- a/src/main/resources/com/example/cv_builder/InfoEntry.fxml
+++ b/src/main/resources/com/example/cv_builder/InfoEntry.fxml
@@ -1,8 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="850.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cv_builder.InfoEntryController">
-
+<AnchorPane prefHeight="850.0" prefWidth="1300.0" style="-fx-background-color: LightBlue;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cv_builder.InfoEntryController">
+   <children>
+      <Label layoutX="447.0" layoutY="26.0" style="-fx-background-color: Chocolate;" text="PLEASE INSERT REQUIRED INFORMATION">
+         <padding>
+            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+         </padding>
+         <font>
+            <Font name="Arial Bold" size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nameTextField" layoutX="255.0" layoutY="122.0" prefHeight="19.0" prefWidth="283.0" />
+      <Label layoutX="113.0" layoutY="116.0" text="Full Name" textFill="#bf402c">
+         <padding>
+            <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+         </padding>
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="emailTextField" layoutX="881.0" layoutY="122.0" prefHeight="25.0" prefWidth="332.0" />
+      <Label layoutX="722.0" layoutY="122.0" text="Email Address" textFill="#dd3535">
+         <font>
+            <Font name="Calibri" size="22.0" />
+         </font>
+      </Label>
+      <TextField fx:id="phoneTextField" layoutX="255.0" layoutY="202.0" prefHeight="25.0" prefWidth="193.0" />
+      <Label layoutX="73.0" layoutY="196.0" text="Phone Number" textFill="#bf402c">
+         <padding>
+            <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+         </padding>
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="733.0" layoutY="209.0" text="Address" textFill="#bf402c">
+         <padding>
+            <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+         </padding>
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextArea fx:id="addressTextField" layoutX="881.0" layoutY="215.0" prefHeight="119.0" prefWidth="332.0" />
+   </children>
 </AnchorPane>
