--- a/src/main/resources/com/example/cv_builder/InfoEntry.fxml
+++ b/src/main/resources/com/example/cv_builder/InfoEntry.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 
@@ -18,8 +23,12 @@
             <Font name="Arial Bold" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="nameTextField" layoutX="255.0" layoutY="122.0" prefHeight="19.0" prefWidth="283.0" />
-      <Label layoutX="113.0" layoutY="116.0" text="Full Name" textFill="#bf402c">
+      <TextField fx:id="nameTextField" layoutX="255.0" layoutY="92.0" prefHeight="19.0" prefWidth="283.0" promptText="First_Name Last_Name">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor>
+      </TextField>
+      <Label layoutX="72.0" layoutY="86.0" text="Full Name" textFill="#bf402c">
          <padding>
             <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
          </padding>
@@ -27,14 +36,17 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="emailTextField" layoutX="881.0" layoutY="122.0" prefHeight="25.0" prefWidth="332.0" />
-      <Label layoutX="722.0" layoutY="122.0" text="Email Address" textFill="#dd3535">
+      <TextField fx:id="emailTextField" layoutX="950.0" layoutY="93.0" prefHeight="25.0" prefWidth="332.0" promptText="Your Professional Email Address" />
+      <Label layoutX="770.0" layoutY="88.0" text="Email Address" textFill="#dd3535">
          <font>
             <Font name="Calibri" size="22.0" />
          </font>
+         <padding>
+            <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+         </padding>
       </Label>
-      <TextField fx:id="phoneTextField" layoutX="255.0" layoutY="202.0" prefHeight="25.0" prefWidth="193.0" />
-      <Label layoutX="73.0" layoutY="196.0" text="Phone Number" textFill="#bf402c">
+      <TextField fx:id="phoneTextField" layoutX="255.0" layoutY="160.0" prefHeight="25.0" prefWidth="193.0" promptText="+88" />
+      <Label layoutX="72.0" layoutY="154.0" text="Phone Number" textFill="#bf402c">
          <padding>
             <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
          </padding>
@@ -42,7 +54,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="733.0" layoutY="209.0" text="Address" textFill="#bf402c">
+      <Label layoutX="777.0" layoutY="118.0" text="Address" textFill="#bf402c">
          <padding>
             <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
          </padding>
@@ -50,6 +62,88 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <TextArea fx:id="addressTextField" layoutX="881.0" layoutY="215.0" prefHeight="119.0" prefWidth="332.0" />
+      <TextArea fx:id="addressTextField" layoutX="950.0" layoutY="125.0" prefHeight="95.0" prefWidth="332.0" promptText="Present Address" />
+      <Label layoutX="62.0" layoutY="235.0" text="Education" textFill="#bf402c">
+         <padding>
+            <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+         </padding>
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <HBox layoutX="174.0" layoutY="232.0" prefHeight="43.0" prefWidth="671.0">
+         <children>
+            <TextField fx:id="tspan" prefHeight="42.0" prefWidth="96.0" promptText="Timespan" />
+            <TextField fx:id="varsity" prefHeight="46.0" prefWidth="177.0" promptText="University" />
+            <TextField fx:id="subject" prefHeight="45.0" prefWidth="245.0" promptText="Degree" />
+            <TextField fx:id="cg" prefHeight="45.0" prefWidth="97.0" promptText="CGPA" />
+            <Button mnemonicParsing="false" onAction="#addEducation" prefHeight="42.0" prefWidth="63.0" text="Add" />
+         </children>
+      </HBox>
+      <TableView fx:id="edtable" layoutX="78.0" layoutY="301.0" prefHeight="193.0" prefWidth="738.0" style="-fx-background-color: Grey;">
+        <columns>
+          <TableColumn fx:id="range" prefWidth="105.0" text="Timespan" />
+          <TableColumn fx:id="uni" prefWidth="255.0" text="University" />
+            <TableColumn fx:id="deg" prefWidth="278.0" text="Degree" />
+            <TableColumn fx:id="cgpa" prefWidth="99.0" text="CGPA" />
+        </columns>
+      </TableView>
+      <Label layoutX="870.0" layoutY="242.0" text="Skills" textFill="#bf402c">
+         <padding>
+            <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+         </padding>
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <HBox layoutX="950.0" layoutY="243.0" prefHeight="36.0" prefWidth="302.0">
+         <children>
+            <TextField fx:id="sk" prefHeight="39.0" prefWidth="234.0" promptText="Name your skill" />
+            <Button mnemonicParsing="false" onAction="#addSkill" prefHeight="39.0" prefWidth="72.0" text="Add" />
+         </children>
+      </HBox>
+      <TableView fx:id="skilltable" layoutX="881.0" layoutY="279.0" prefHeight="137.0" prefWidth="406.0" style="-fx-background-color: Grey;">
+         <columns>
+            <TableColumn fx:id="skill" prefWidth="394.0" text="Skills" />
+         </columns>
+      </TableView>
+      <Label layoutX="52.0" layoutY="530.0" text="Work Experience" textFill="#bf402c">
+         <padding>
+            <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+         </padding>
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <HBox layoutX="233.0" layoutY="509.0" prefHeight="42.0" prefWidth="876.0">
+         <children>
+            <TextField fx:id="place" prefHeight="42.0" prefWidth="282.0" promptText="Company/Corporation/Firm" />
+            <TextField fx:id="rank" prefHeight="42.0" prefWidth="286.0" promptText="Job Title" />
+            <TextField fx:id="time" prefHeight="51.0" prefWidth="185.0" promptText="Timeline (Like: 2020-Present)" />
+            <Button mnemonicParsing="false" onAction="#addWork" prefHeight="19.0" prefWidth="127.0" text="Add ">
+               <HBox.margin>
+                  <Insets top="8.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+      <TextArea fx:id="desc" layoutX="235.0" layoutY="557.0" prefHeight="84.0" prefWidth="568.0" promptText="Desctription of Job (Projects)">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </TextArea>
+      <TableView fx:id="worktable" layoutX="62.0" layoutY="641.0" prefHeight="123.0" prefWidth="973.0" style="-fx-background-color: Grey;">
+         <columns>
+            <TableColumn fx:id="company" prefWidth="105.0" text="Workplace" />
+            <TableColumn fx:id="jobtitle" prefWidth="255.0" text="Title" />
+            <TableColumn fx:id="timeline" prefWidth="96.0" text="Timeline" />
+            <TableColumn fx:id="description" prefWidth="281.0" text="Description" />
+         </columns>
+      </TableView>
+      <Button fx:id="ProceedButton" layoutX="629.0" layoutY="780.0" mnemonicParsing="false" onAction="#ProceedToPreview" style="-fx-background-color: green;" text="Proceed" textFill="#c4bf1a">
+         <font>
+            <Font name="Georgia Bold" size="19.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
